# bot

./: .env.sample  .gitignore  Dockerfile  LICENSE  README.md  aviasales_api.py  docker-compose.yml  weather_api.py
app/: .flake8  airport_finder.py  answers.py  aviasales_api.py  buttons.py  custom_ticket_service.py  destinations.py  find_airport.py  keyboards.py  main.py  pyproject.toml  service_utils.py  subscription.py  weather_api.py  weather_service.py
app/bot_utils/: answers.py  buttons.py  keyboards.py
app/database/: airports.json  cities.json  db_api.py  dump-bot_db-202311262152.sql  dump-bot_db-202311272053.sql  raw_sql.py  travelnavi_all.sql
app/db/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.index  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
app/db/#innodb_redo/: #ib_redo10  #ib_redo41_tmp
app/db/bot_db/: airports.ibd  cities.ibd  countries.ibd  regions.ibd  seasons.ibd  subscriptions.ibd  users.ibd
app/db/mysql/: general_log_213.sdi  slow_log_214.sdi
app/db/performance_schema/: accounts_145.sdi  binary_log_trans_189.sdi  cond_instances_82.sdi  data_lock_waits_161.sdi  data_locks_160.sdi  error_log_83.sdi  events_errors_su_139.sdi  events_errors_su_140.sdi  events_errors_su_141.sdi  events_errors_su_142.sdi  events_errors_su_143.sdi  events_stages_cu_111.sdi  events_stages_hi_112.sdi  events_stages_hi_113.sdi  events_stages_su_114.sdi  events_stages_su_115.sdi  events_stages_su_116.sdi  (+93 more)
app/db_api_example/: db.py
(+2 files in other folders)
