[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["yongers"]
readme = "README.md"

[tool.black]
line-length = 100

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.1.1"
flake8 = "^6.1.0"
black = "^23.11.0"
isort = "^5.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
